--- a/E/Epic/Vail_Resort_Template(T22)/ads/160x600/WhistlerBlackcomb/160x600_WhistlerBlackcomb.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/160x600/WhistlerBlackcomb/160x600_WhistlerBlackcomb.htm
@@ -48,8 +48,8 @@
       <div id="backgroundImage1" style="top: 44px;width: 160px;height: auto;" class="asset-top frame" data-image="backgroundImage1"></div>
       <div id="backgroundImage2" style="top: 44px;width: 160px;height: auto;" class="asset-top frame multiframe" data-image="backgroundImage2"></div>
       <div id="backgroundImage3" style="top: 44px;width: 160px;height: auto;" class="asset-top frame multiframe" data-image="backgroundImage3"></div>
-      <div id="topWhitePatch" class="frame" style="top:-556px;background-color:rgba(0, 0, 0, 1.0);"></div>
-      <div id="bottomWhitePatch" class="frame" style="top:453px;background-color:rgba(0, 0, 0, 1.0);"></div>
+      <div id="topWhitePatch" class="frame" style="top:-556px;background-color:#CC0000;"></div>
+      <div id="bottomWhitePatch" class="frame" style="top:453px;background-color:#CC0000;"></div>
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="productLableLogo" class="asset frame" data-image="productLableLogo" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
@@ -147,7 +147,7 @@
             // ref: 'ref.png'
             logoImage: './../images/160x600_WhistlerBlackcomb_LogoImage.png',
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
-            ctaBtnColor: '#CC0000^#db1f1f',
+            ctaBtnColor: '#000000^#4d4d4f',
             disclaimerText: '<sup>*</sup>TERMS APPLY',
           },
           beforeLoad: function(data){
