--- a/E/Epic/Vail_Resort_Template(T22)/ads/300x250/Northstar/300x250_Northstar.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/300x250/Northstar/300x250_Northstar.htm
@@ -27,7 +27,7 @@
         font-family: arial,sans-serif;
         font-weight: 900;
         font-style: normal;
-        color: #7d1c25;
+        color: #FFFFFF;
         background-color: #fff;
       }
       .frame {
@@ -42,6 +42,10 @@
       #frameText2 > span {width: 100%;height: 100%;}
       /*#frameText3 > span {width: 100%;height: 100%;}*/
       #ad:hover #cta { color: !{ctaBtn};  }
+      #logoImage img{
+        top: 18px;
+        width: 23%;
+      }
     </style>
   </head>
   <body>
@@ -49,8 +53,8 @@
       <div id="backgroundImage1" style="top: 37px;width: 300px; height: auto;" class="asset-top frame" data-image="backgroundImage1"></div>
       <div id="backgroundImage2" style="top: 37px;width: 300px; height: auto;" class="asset-top frame multiframe" data-image="backgroundImage2"></div>
       <div id="backgroundImage3" style="top: 37px;width: 300px; height: auto;" class="asset-top frame multiframe" data-image="backgroundImage3"></div>
-      <div id="topWhitePatch" class="frame" style="top:-213px;background-color:white;"></div>
-      <div id="bottomWhitePatch" class="frame" style="top:165px;background-color:white;"></div>
+      <div id="topWhitePatch" class="frame" style="top:-213px;background-color:#7D1C25;"></div>
+      <div id="bottomWhitePatch" class="frame" style="top:165px;background-color:#7D1C25;"></div>
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="productLableLogo" class="asset frame" data-image="productLableLogo" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
@@ -89,7 +93,7 @@
         style="top: 173px;
           right: 5px;
           font-size: 8px;
-          color: #545759;
+          color: #b5b6b6;
           letter-spacing: -0.1px;">
       </div>
       <div id="cta" class="text DashiellFineBold"
@@ -143,9 +147,9 @@
           ],
           staticData: {
             // ref: 'ref.png'
-            logoImage: './../images/300x250_Northstar_LogoImage.png',
+            logoImage: './../images/2020_NS_NorthstarCalifornia_Stacked_RGB_White.png',
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
-            ctaBtnColor: '#7d1c25^#D7941D',
+            ctaBtnColor: '#D7941D^#ffb832',
            disclaimerText: '<sup>*</sup>TERMS APPLY',
           },
           beforeLoad: function(data){
