--- a/E/Epic/Vail_Resort_Template(T22)/ads/320x50/Northstar/320x50_Northstar.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/320x50/Northstar/320x50_Northstar.htm
@@ -27,7 +27,7 @@
         font-family: arial,sans-serif;
         font-weight: 900;
         font-style: normal;
-        color: #7d1c25;
+        color: #FFFFFF;
         background-color: #fff;
       }
       .frame {
@@ -42,6 +42,11 @@
       #frameText2 > span {width: 100%;height: 100%;}
       /*#frameText3 > span {width: 100%;height: 100%;}*/
       #ad:hover #cta { color: !{ctaBtn};  }
+      #logoImage img {
+        left: 13px;
+        height: 40px;
+        top: 23px;
+      }
     </style>
   </head>
   <body>
@@ -49,8 +54,8 @@
       <div id="backgroundImage1" style="left: 28px; height: 50px;width: auto;" class="asset-left frame" data-image="backgroundImage1"></div>
       <div id="backgroundImage2" style="left: 28px; height: 50px;width: auto;" class="asset-left frame multiframe" data-image="backgroundImage2"></div>
       <div id="backgroundImage3" style="left: 28px; height: 50px;width: auto;" class="asset-left frame multiframe" data-image="backgroundImage3"></div>
-      <div id="topWhitePatch" class="frame" style="left:-292px;background-color:white;"></div>
-      <div id="bottomWhitePatch" class="frame" style="left:160px;background-color:white;"></div>
+      <div id="topWhitePatch" class="frame" style="left:-292px;background-color:#7D1C25;"></div>
+      <div id="bottomWhitePatch" class="frame" style="left:160px;background-color:#7D1C25;"></div>
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="productLableLogo" class="asset frame" data-image="productLableLogo" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
@@ -92,7 +97,7 @@
         style="bottom: 0px;
           right: 4px;
           font-size: 5px;
-          color: #545759;
+          color: #b5b6b6;
           letter-spacing: -0.1px;">
       </div>
       <div id="cta" class="text DashiellFineBold"
@@ -146,9 +151,9 @@
           ],
           staticData: {
             // ref: 'ref.png'
-            logoImage: './../images/320x50_Northstar_LogoImage.png',
+            logoImage: './../images/320x50_2020_NS_NorthstarCalifornia_Stacked_RGB_White.png',
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
-            ctaBtnColor: '#7d1c25^#D7941D',
+            ctaBtnColor: '#D7941D^#ffb832',
             disclaimerText: '<sup>*</sup>TERMS APPLY',
           },
           beforeLoad: function(data){
