--- a/E/Epic/Vail_Resort_Template(T22)/ads/320x50/WhistlerBlackcomb/320x50_WhistlerBlackcomb.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/320x50/WhistlerBlackcomb/320x50_WhistlerBlackcomb.htm
@@ -48,8 +48,8 @@
       <div id="backgroundImage1" style="left: 55px; height: 50px;width: auto;" class="asset-left frame" data-image="backgroundImage1"></div>
       <div id="backgroundImage2" style="left: 55px; height: 50px;width: auto;" class="asset-left frame multiframe" data-image="backgroundImage2"></div>
       <div id="backgroundImage3" style="left: 55px; height: 50px;width: auto;" class="asset-left frame multiframe" data-image="backgroundImage3"></div>
-      <div id="topWhitePatch" class="frame" style="left:-265px;background-color:rgba(0, 0, 0, 1);"></div>
-      <div id="bottomWhitePatch" class="frame" style="left:170px;background-color:rgba(0, 0, 0, 1);"></div>
+      <div id="topWhitePatch" class="frame" style="left:-265px;background-color:#CC0000;"></div>
+      <div id="bottomWhitePatch" class="frame" style="left:170px;background-color:#CC0000;"></div>
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="productLableLogo" class="asset frame" data-image="productLableLogo" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
@@ -147,7 +147,7 @@
             // ref: 'ref.png'
             logoImage: './../images/320x50_WhistlerBlackcomb_LogoImage.png',
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
-            ctaBtnColor: '#CC0000^#db1f1f',
+            ctaBtnColor: '#000000^#4d4d4f',
             disclaimerText: '<sup>*</sup>TERMS APPLY',
           },
           beforeLoad: function(data){
