--- a/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/300x250/MtSnow/300x250_MtSnow.htm
+++ b/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/300x250/MtSnow/300x250_MtSnow.htm
@@ -9,16 +9,11 @@
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.0.1/dist/gsap.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/script.min.js"></script>
     <style media="screen">
-      .SabonLTProBold {
-        font-family: linotype-sabon,sans-serif;
-        font-weight: 700;
+      .poppins {
+        font-family: "poppins";
+        font-weight: 600;
         font-style: normal;
       }
-      @font-face {
-          font-family: CocoGothicBold;
-          src: url('fonts/Zetafonts - Coco Gothic Bold.woff') format("woff");
-      }
-      .CocoGothicBold { font-family: CocoGothicBold; }
     </style>
     <style media="screen" data-dynamic="style">
       #ad {
@@ -27,7 +22,7 @@
         font-family: arial,sans-serif;
         font-weight: 900;
         font-style: normal;
-        color: #323232;
+        color: #FAFFFF;
         background-color: #fff;
       }
       .frame {
@@ -46,13 +41,13 @@
       <div id="backgroundImage1" style="top: 37px;width: 300px; height: auto;" class="asset-top frame" data-image="backgroundImage1"></div>
       <div id="backgroundImage2" style="top: 37px;width: 300px; height: auto;" class="asset-top frame multiframe" data-image="backgroundImage2"></div>
       <div id="backgroundImage3" style="top: 37px;width: 300px; height: auto;" class="asset-top frame multiframe" data-image="backgroundImage3"></div>
-      <div id="topWhitePatch" class="frame" style="top:-213px;background-color:rgba(255, 255, 255, 1.0);"></div>
-      <div id="bottomWhitePatch" class="frame" style="top:165px;background-color:rgba(255, 255, 255, 1.0);"></div>
+      <div id="topWhitePatch" class="frame" style="top:-213px;background-color:#006CAB;"></div>
+      <div id="bottomWhitePatch" class="frame" style="top:165px;background-color:#006CAB;"></div>
       <div id="productLableLogoBg" class="asset frame" data-image="productLableLogoBg"></div>
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="productLableLogo" class="asset frame" data-image="productLableLogo" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
-      <div id="frameText1" class="text-left CocoGothicBold"
+      <div id="frameText1" class="text-left poppins"
         data-text="frameText1"
         style="top: 171px;
           left: 11px;
@@ -62,7 +57,7 @@
           letter-spacing: 0px;
           line-height: 1.15;">
       </div>
-      <div id="frameText2" class="text-left CocoGothicBold"
+      <div id="frameText2" class="text-left poppins"
         data-text="frameText2"
         style="top: 171px;
           left: 11px;
@@ -72,7 +67,7 @@
           letter-spacing: 0px;
           line-height: 1.15;">
       </div>
-      <div id="frameText3" class="text-left CocoGothicBold"
+      <div id="frameText3" class="text-left poppins"
         data-text="frameText3"
         style="top: 171px;
           left: 11px;
@@ -82,7 +77,7 @@
           letter-spacing: 0px;
           line-height: 1.15;">
       </div>
-      <div id="cta" class="text CocoGothicBold"
+      <div id="cta" class="text poppins"
         data-text="ctaText"
         data-style="padding:0 10px 0px;"
         style="top: 194px;
@@ -92,13 +87,13 @@
           font-size: 12px;
           line-height: 20px;
           border-radius: 15px;
-          color: #fff;">
+          color: #FAFFFF;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
     </div>
     <div id="loadFont" style="width:0;height:0;overflow:hidden;">
       <div class="SabonLTProBold">SabonLTProBold</div>
-      <div class="CocoGothicBold">CocoGothicBold</div>
+      <div class="poppins">poppins</div>
     </div>
     <script type="text/javascript">
       var layout = 'standard';
@@ -136,7 +131,7 @@
             // ref: 'ref.png'
             logoImage: './../images/300x250_MtSnow_LogoImage.png',
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
-            ctaBtnColor: '#E31837^#000000',
+            ctaBtnColor: '#04A9DB^#00468C',
           },
           beforeLoad: function(data){
             data.map(function(content){
@@ -212,7 +207,7 @@
             canvas.width = this.width;
             canvas.height = this.height;
             document.body.appendChild(canvas);
-            ctx.fillStyle = "#0067B1";
+            ctx.fillStyle = "#04A9DB";
             ctx.fillRect(0, 0, canvas.width, canvas.height);
             ctx.globalCompositeOperation = 'destination-in';
             ctx.drawImage(this, 0, 0);
