--- a/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/728x90/SevenSprings/728x90_SevenSprings.htm
+++ b/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/728x90/SevenSprings/728x90_SevenSprings.htm
@@ -9,13 +9,13 @@
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.0.1/dist/gsap.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/script.min.js"></script>
     <style media="screen">
-      .RobotoSlabBold{
-        font-family: roboto-slab,serif;
+      .hoss-sharp-black {
+        font-family: "hoss-sharp";
         font-weight: 700;
         font-style: normal;
       }
-      .MontserratExtraBold {
-        font-family: montserrat, sans-serif;
+      .hoss-sharp-heavy {
+        font-family: "hoss-sharp";
         font-weight: 800;
         font-style: normal;
       }
@@ -27,7 +27,7 @@
         font-family: arial,sans-serif;
         font-weight: 900;
         font-style: normal;
-        color: #113451;
+        color: #F6FFF7;
         background-color: #fff;
       }
       .frame {
@@ -46,13 +46,13 @@
       <div id="backgroundImage1" style="left: 113px;height: 90px;width: auto;" class="asset-left frame" data-image="backgroundImage1"></div>
       <div id="backgroundImage2" style="left: 113px;height: 90px;width: auto;" class="asset-left frame multiframe" data-image="backgroundImage2"></div>
       <div id="backgroundImage3" style="left: 113px;height: 90px;width: auto;" class="asset-left frame multiframe" data-image="backgroundImage3"></div>
-      <div id="topWhitePatch" class="frame" style="left:-615px;background-color:rgba(255, 255, 255, 1.0);"></div>
-      <div id="bottomWhitePatch" class="frame" style="left:424px;background-color:rgba(255, 255, 255, 1.0);"></div>
+      <div id="topWhitePatch" class="frame" style="left:-615px;background-color:#008D55;"></div>
+      <div id="bottomWhitePatch" class="frame" style="left:424px;background-color:#008D55;"></div>
       <div id="productLableLogoBg" class="asset frame" data-image="productLableLogoBg"></div>
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="productLableLogo" class="asset frame" data-image="productLableLogo" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
-      <div id="frameText1" class="text-left MontserratExtraBold"
+      <div id="frameText1" class="text-left hoss-sharp-black"
         data-text="frameText1"
         style="top: 4px;
           left: 442px;
@@ -62,7 +62,7 @@
           letter-spacing: 0.02em;
           line-height: 1.1;">
       </div>
-      <div id="frameText2" class="text-left MontserratExtraBold"
+      <div id="frameText2" class="text-left hoss-sharp-black"
         data-text="frameText2"
         style="top: 4px;
           left: 442px;
@@ -72,7 +72,7 @@
           letter-spacing: 0.02em;
           line-height: 1.1;">
       </div>
-      <div id="frameText3" class="text-left MontserratExtraBold"
+      <div id="frameText3" class="text-left hoss-sharp-black"
         data-text="frameText3"
         style="top: 4px;
           left: 442px;
@@ -82,7 +82,7 @@
           letter-spacing: 0.02em;
           line-height: 1.1;">
       </div>
-      <div id="cta" class="text MontserratExtraBold"
+      <div id="cta" class="text hoss-sharp-black"
         data-text="ctaText"
         data-style="padding:1px 10px 0px;"
         style="top: 29px;
@@ -93,12 +93,12 @@
           line-height: 20px;
           letter-spacing: 0.05em;
           /*border-radius: 12px;*/
-          color: #113451;">
+          color: #141418;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
     </div>
     <div id="loadFont" style="width:0;height:0;overflow:hidden;">
-      <div class="MontserratExtraBold">MontserratExtraBold</div>
+      <div class="hoss-sharp-black">hoss-sharp-black</div>
     </div>
     <script type="text/javascript">
       var layout = 'standard';
@@ -136,7 +136,7 @@
             // ref: 'ref.png'
             logoImage: './../images/728x90_SevenSprings_LogoImage.png',
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
-            ctaBtnColor: '#F99A00^#faba52',
+            ctaBtnColor: '#F6FFF7^#89EBAD',
           },
           beforeLoad: function(data){
             data.map(function(content){
@@ -216,7 +216,7 @@
             canvas.width = this.width;
             canvas.height = this.height;
             document.body.appendChild(canvas);
-            ctx.fillStyle = "#113451";
+            ctx.fillStyle = "#89EBAD";
             ctx.fillRect(0, 0, canvas.width, canvas.height);
             ctx.globalCompositeOperation = 'destination-in';
             ctx.drawImage(this, 0, 0);
