--- a/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/160x600/SevenSprings/160x600_SevenSprings.htm
+++ b/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/160x600/SevenSprings/160x600_SevenSprings.htm
@@ -95,6 +95,7 @@
           font-size: 12px;
           line-height: 20px;
           letter-spacing: 0.05em;
+          border-radius: 7px;
           /*border-radius: 15px;*/
           color: #141418;">
       </div>
