--- a/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/320x50/SevenSprings/320x50_SevenSprings.htm
+++ b/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/320x50/SevenSprings/320x50_SevenSprings.htm
@@ -92,6 +92,7 @@
           font-size: 8px;
           line-height: 10px;
           letter-spacing: 0.5px;
+          border-radius: 4px;
           /*border-radius: 12px;*/
           color: #141418;">
       </div>
