--- a/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/970x250/SevenSprings/970x250_SevenSprings.htm
+++ b/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/970x250/SevenSprings/970x250_SevenSprings.htm
@@ -93,6 +93,7 @@
           font-size: 16px;
           line-height: 22px;
           letter-spacing: 0.05em;
+          border-radius: 7px;
           /*border-radius: 20px;*/
           color: #141418;">
       </div>
